--- a/Projects/P2/Dockerfile
+++ b/Projects/P2/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.8
 
 ADD . .
 
-RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
-CMD ["python", "-m", "unittest", "discover", "-s", "./src/Tests"]
+CMD ["python", "-m", "unittest", "discover", "-s", "Tests"]
 
 
