--- a/Projects/P2/.travis.yml
+++ b/Projects/P2/.travis.yml
@@ -1,18 +1,14 @@
 language: python
-
 python:
   - "3.7"
   - "3.8"
   - "3.9"
   - "3.10"
-
 install:
-  -pip install -r requirements.txt
-
+  -pip install -r Projects/P2/requirements.txt
 #Commands
 script:
-  -python -m unittest discover -s Tests
-
+  -python -m unittest discover -s Projects/P2/src/Tests
 branches:
   only:
     -main
