--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.9"
 
 install:
-  -pip install -r Projects/P2/requirements.txt
+  -pip install -r requirements.txt
 
 #Commands
 script:
